Fix contact row gap

--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -35,6 +35,10 @@ p {
   margin: 50px;
 }
 
+.contact-row {
+  margin-top: 20px;
+}
+
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
